infra/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flow-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: flow-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flow-api
    spec:
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "aws-secrets"
      containers:
        - name: api
          image: DOCKER_IMAGE
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: '128Mi'
              memory: 500
      imagePullSecrets:
            - name: flow-api-secret
