infra/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flow-api
spec:
  selector:
    app.kubernetes.io/name: flow-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
