infra/flow-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: flow-api
spec:
  selector:
    app: flow-api
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flow-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flow-api
  template:
    metadata:
      labels:
        app: flow-api
    spec:
      containers:
        - name: api
          image: 864144207131.dkr.ecr.eu-west-2.amazonaws.com/flow-api:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: IfNotPresent
      # imagePullSecrets:
      #   - name: eks-ekample-reg-secret
