infra/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flow-api
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flow-api
                port:
                  number: 80
